--- a/zad_1_Szymon_Olszok/MainWindow.xaml
+++ b/zad_1_Szymon_Olszok/MainWindow.xaml
@@ -23,26 +23,26 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBox Name="inputTextBox" Grid.Row="0" Grid.Column="0"
+        <TextBox Name="resultTextBox" Grid.Row="0" Grid.Column="0"
             Grid.ColumnSpan="5" FontSize="50" />
 
-        <Button Grid.Row="1" Content="7" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="1" Grid.Column="1" Content="8" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="1" Grid.Column="2" Content="9" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="2" Content="4" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="2" Grid.Column="1" Content="5" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="2" Grid.Column="2" Content="6" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="3" Content="1" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="3" Grid.Column="1" Content="2" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="3" Grid.Column="2" Content="3" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="0" FontSize="26" Click="Number_Click" />
-        <Button Grid.Row="4" Grid.Column="2"  Content="," FontSize="26" Click="comma_Click" />
+        <Button Grid.Row="1" Content="7" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="1" Grid.Column="1" Content="8" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="1" Grid.Column="2" Content="9" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="2" Content="4" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="2" Grid.Column="1" Content="5" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="2" Grid.Column="2" Content="6" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="3" Content="1" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="3" Grid.Column="1" Content="2" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="3" Grid.Column="2" Content="3" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="4" Grid.ColumnSpan="2" Content="0" FontSize="26" Click="Button_Click" />
+        <Button Grid.Row="4" Grid.Column="2"  Content="," FontSize="26" Click="Button_Click_Comma" />
 
-        <Button Grid.Row="1" Grid.Column="3" Content="/" FontSize="26" Click="Operator_Click" />
-        <Button Grid.Row="2" Grid.Column="3" Content="-" FontSize="26" Click="Operator_Click" />
-        <Button Grid.Row="3" Grid.Column="3" Content="*" FontSize="26" Click="Operator_Click" />
-        <Button Grid.Row="4" Grid.Column="3" Content="C" FontSize="26" Click="Clear_Click" />
-        <Button Grid.Row="1" Grid.Column="4" Grid.RowSpan="2" FontSize="26" Click="Operator_Click" Content="+" />
-        <Button Grid.Row="3" Grid.Column="4" Grid.RowSpan="2" FontSize="26" Click="Equals_Click" Content="=" />
+        <Button Grid.Row="1" Grid.Column="3" Content="/" FontSize="26" Click="Button_Click_Divide" />
+        <Button Grid.Row="2" Grid.Column="3" Content="-" FontSize="26" Click="Button_Click_Substract" />
+        <Button Grid.Row="3" Grid.Column="3" Content="*" FontSize="26" Click="Button_Click_Multiply" />
+        <Button Grid.Row="4" Grid.Column="3" Content="C" FontSize="26" Click="Button_Click_Clear" />
+        <Button Grid.Row="1" Grid.Column="4" Grid.RowSpan="2" FontSize="26" Click="Button_Click_Add" Content="+" />
+        <Button Grid.Row="3" Grid.Column="4" Grid.RowSpan="2" FontSize="26" Click="Button_Click_Equals" Content="=" />
     </Grid>
 </Window>
