--- a/zad_3_Szymon_Olszok/Player2.xaml
+++ b/zad_3_Szymon_Olszok/Player2.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="zad_3_Szymon_Olszok.MainWindow"
+﻿<Window x:Class="zad_3_Szymon_Olszok.Player2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
