--- a/zad_1_Szymon_Olszok/MainWindow.xaml
+++ b/zad_1_Szymon_Olszok/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Lista_3_Szymon_Olszok.MainWindow"
+﻿<Window x:Class="zad_1_Szymon_Olszok.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Lista_3_Szymon_Olszok"
+        xmlns:local="clr-namespace:zad_1_Szymon_Olszok"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
